--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/subhivmoozhippurath/corona_tracker",
+  "homepage": "https://subhivmoozhippurath.github.io/corona_tracker",
   "name": "covid_tracker",
   "version": "0.1.0",
   "private": true,
